--- a/ecsopendata/static/templates/index.html
+++ b/ecsopendata/static/templates/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="static/css/master.css">
 
   </head>
-  <body bgcolor="#FF69B4">
+  <body>
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="">ECS OpenData</a>
